--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^1.15.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
